     the curn.bat or curn.sh script installed by the curn graphical
     installer, you will automatically have access to the BSF API and
     the language bindings that are shipped with it.

  b) To use the Java 6 javax.script API, you must be running under Java 6.
     Additionally, to use any languages other than Rhino Javascript (which
     comes with Java 6), you must have the add-on JSR 223 scripting engines
     jar file. The latest version of that software is available at
     "https://scripting.dev.java.net/". A version of that jar file is
     shipped with curn.

- The ScriptOutputHandler no longer supports the BSF objects that had
  to be retrieved via "bsf.lookupBean()". Instead, only the global
  "curn" object is exposed, and it's exposed automatically as a script
  global. For more information, see the "Writing a Script Output Handler"
  section in the "curn User's Guide".

- curn's MiniRSSParser is now implemented in terms of DOM4J
  (http://www.dom4j.org). Previously, it was implemented using the SAX
  callback-based XML parsing model, but that approach is harder to follow
  and harder to maintain. It now uses DOM4J to load the XML document into
  an in-memory DOM, which it then processes. This change is entirely
  internal.

- Miscellaneous code cleanup based on output from PMD (pmd.sourceforge.net).

- The graphical installer now renders the license in a more readable,
  proportional font.

- Propagated modified license (from version 3.0) into source files.

---------------------------------------------------------------------------
Version 3.0 (5 July, 2006)

			       ------------
			       Enhancements
			       ------------

- Added plug-in capability. Upon startup, curn will look for plug-ins
  in ${curn.home}/plugins, ${user.home}/curn/plugins and
  ${user.home}/.curn/plugins. (${user.home} is the Java System "user.home"
  property. ${curn.home} is the "curn" installation directory.)
